--- a/src/components/CardProject/CardProject.css
+++ b/src/components/CardProject/CardProject.css
@@ -1,7 +1,3 @@
-.m-0{
-    margin: 0;
-}
-
 .card{
     border-radius: 10px;
     padding: 24px 12px;
@@ -21,6 +17,7 @@
 .fig-card img {
     width: 100%;
     height: 100%;
+    border-radius: 4px;
 }
 
 .footer-card{
