style(header): hidden links from nav in mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,3 +16,10 @@
     align-items: center;
     gap: 20px;
 }
+
+@media screen and (max-width: 480px) {
+    .nav a:nth-child(-n + 3){
+        display: none;
+        /* visibility: hidden; */
+    }
+}
