--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,9 @@ section{
 }
 
 .main-container{
-  padding: 5rem;
-  border: 1px solid red;
+  /* padding: 5rem;
+  border: 1px solid red; */
+  max-width: 1024px;
+  width: 100%;
+  margin: 0 auto;
 }
