--- a/src/components/ButtonPrimary/ButtonPrimary.css
+++ b/src/components/ButtonPrimary/ButtonPrimary.css
@@ -11,4 +11,8 @@
     /* max-width: 270px; */
     width: 100%;
     /* margin-top: 1rem; */
+    transition: background-color ease-in .2s;
+}
+.btn-primary:hover{
+    background-color: var(--primary-400);
 }
