--- a/src/components/Link/Link.css
+++ b/src/components/Link/Link.css
@@ -2,4 +2,69 @@
     display: flex;
     align-items: center;
     gap: 8px;
+    transition: 0.3s ease-out;
 }
+
+.p-line{
+    margin: 8px auto;
+}
+
+.underline {
+    display: inline-flex;
+    position: relative;
+}
+
+.underline::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: var(--primary);
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: 0.5s ease-in-out;
+}
+
+.underline:hover::after {
+    transform: scaleX(1);
+    /* transform-origin: right; */
+}
+
+.underline2 {
+    display: inline-flex;
+    position: relative;
+    /* margin-bottom: 10px;
+    height: 4px;
+    background: var(--light);
+    bottom: 0;
+    right: 0; */
+}
+
+.underline2::after {
+    content: "";
+    width: 0;
+    height: 4px;
+    background: var(--primary);
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+    transition: all 0.5s ease-in-out;
+    will-change: width;
+    /* left: 0;
+    transform: scaleX(0);
+    transform-origin: left; */
+}
+
+.underline2:hover::after {
+    width: 100%;
+    right: 0;
+    /* transform: scaleX(1); */
+    /* transform-origin: right; */
+}
+
+/* .underline2:hover{
+    color: var(--primary);
+} */
